force-app/main/default/objects/OrderItemGeneral__c/OrderItemGeneral__c.object-meta.xml
<CustomObject>
    <label>Order Item: General Info</label>
    <nameField>
        <label>ITE Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Item: General Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>