force-app/main/default/objects/OrderItemGeneral__c/fields/CDD__c.field-meta.xml
<CustomField>
    <fullName>CDD__c</fullName>
    <formula>OrderProduct__r.CDD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CDD</label>
    <type>Date</type>
</CustomField>