force-app/main/default/objects/OrderItemGeneral__c/fields/CDD_Deliv_Date_Delta__c.field-meta.xml
<CustomField>
    <fullName>CDD_Deliv_Date_Delta__c</fullName>
    <formula>OrderProduct__r.CDD_Deliv_Date_Delta__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Δ CDD/Deliv.Date</label>
    <type>Text</type>
</CustomField>