force-app/main/default/objects/OrderItemGeneral__c/fields/CDD_Deviation__c.field-meta.xml
<CustomField>
    <fullName>CDD_Deviation__c</fullName>
    <formula>OrderProduct__r.CDD_Deviation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CDD Deviation</label>
    <type>Text</type>
</CustomField>