force-app/main/default/objects/OrderItemGeneral__c/fields/DeliveredPercent__c.field-meta.xml
<CustomField>
    <fullName>DeliveredPercent__c</fullName>
    <formula>Delivered__c / Qty_t__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivered (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>