force-app/main/default/objects/OrderItemGeneral__c/fields/FinalCDD__c.field-meta.xml
<CustomField>
    <fullName>FinalCDD__c</fullName>
    <formula>OrderProduct__r.FinalCDD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final CDD</label>
    <type>Date</type>
</CustomField>