force-app/main/default/objects/OrderItemGeneral__c/fields/FinallyDelivDate__c.field-meta.xml
<CustomField>
    <fullName>FinallyDelivDate__c</fullName>
    <formula>OrderProduct__r.FinallyDelivDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Delivery Date</label>
    <type>Date</type>
</CustomField>