force-app/main/default/objects/OrderItemGeneral__c/fields/FinallyProdDate__c.field-meta.xml
<CustomField>
    <fullName>FinallyProdDate__c</fullName>
    <formula>OrderProduct__r.FinallyProdDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Prod. Date</label>
    <type>Date</type>
</CustomField>