force-app/main/default/objects/OrderItemGeneral__c/fields/FinallyShippedDate__c.field-meta.xml
<CustomField>
    <fullName>FinallyShippedDate__c</fullName>
    <formula>OrderProduct__r.FinallyShippedDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Shipped Date</label>
    <type>Date</type>
</CustomField>