force-app/main/default/objects/OrderItemGeneral__c/fields/ID_ERP__c.field-meta.xml
<CustomField>
    <fullName>ID_ERP__c</fullName>
    <formula>OrderProduct__r.ID_ERP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID in ERP</label>
    <type>Text</type>
</CustomField>