force-app/main/default/objects/OrderItemGeneral__c/fields/IsPlaced__c.field-meta.xml
<CustomField>
    <fullName>IsPlaced__c</fullName>
    <formula>OrderProduct__r.Is_Placed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Placed</label>
    <type>Checkbox</type>
</CustomField>