force-app/main/default/objects/OrderItemGeneral__c/fields/NPP_ERP__c.field-meta.xml
<CustomField>
    <fullName>NPP_ERP__c</fullName>
    <formula>OrderProduct__r.NPP_ERP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPP in ERP</label>
    <type>Text</type>
</CustomField>