force-app/main/default/objects/OrderItemGeneral__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Order Item: General Info</relationshipLabel>
    <relationshipName>Order_Item_General_Info</relationshipName>
    <type>Lookup</type>
</CustomField>