force-app/main/default/objects/OrderItemGeneral__c/fields/OrderProduct__c.field-meta.xml
<CustomField>
    <fullName>OrderProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Order Item: General Info</relationshipLabel>
    <relationshipName>Order_Item_General_Info</relationshipName>
    <type>Lookup</type>
</CustomField>