force-app/main/default/objects/OrderItemGeneral__c/fields/OrderSum__c.field-meta.xml
<CustomField>
    <fullName>OrderSum__c</fullName>
    <formula>ROUND(OrderProduct__r.Quantity *  OrderProduct__r.UnitPrice,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>