force-app/main/default/objects/OrderItemGeneral__c/fields/PlanFactDiff__c.field-meta.xml
<CustomField>
    <fullName>PlanFactDiff__c</fullName>
    <formula>Produced__c -  Qty_t__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Δ Plan/Fact, t</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>