force-app/main/default/objects/OrderItemGeneral__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <formula>Shop__r.Plant__r.Name + &apos; / &apos;+ Shop__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plant/Shop</label>
    <type>Text</type>
</CustomField>