force-app/main/default/objects/OrderItemGeneral__c/fields/ProdName__c.field-meta.xml
<CustomField>
    <fullName>ProdName__c</fullName>
    <formula>OrderProduct__r.Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>