force-app/main/default/objects/OrderItemGeneral__c/fields/ProdPlan__c.field-meta.xml
<CustomField>
    <fullName>ProdPlan__c</fullName>
    <formula>OrderProduct__r.ProdPlan__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prod. Plan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>