force-app/main/default/objects/OrderItemGeneral__c/fields/Produced__c.field-meta.xml
<CustomField>
    <fullName>Produced__c</fullName>
    <formula>OrderProduct__r.ProducedQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Produced (t)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>