force-app/main/default/objects/OrderItemGeneral__c/fields/ProducedPercent__c.field-meta.xml
<CustomField>
    <fullName>ProducedPercent__c</fullName>
    <formula>Produced__c /  Qty_t__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Produced (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>