force-app/main/default/objects/OrderItemGeneral__c/fields/Qty_t__c.field-meta.xml
<CustomField>
    <fullName>Qty_t__c</fullName>
    <formula>OrderProduct__r.Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qty (t)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>