force-app/main/default/objects/OrderItemGeneral__c/fields/ShippedPercent__c.field-meta.xml
<CustomField>
    <fullName>ShippedPercent__c</fullName>
    <formula>Shipped__c / Qty_t__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipped (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>