force-app/main/default/objects/OrderItemGeneral__c/fields/Shop__c.field-meta.xml
<CustomField>
    <fullName>Shop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shop</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipLabel>Order Item: General Info</relationshipLabel>
    <relationshipName>Order_Item_General_Info</relationshipName>
    <type>Lookup</type>
</CustomField>