force-app/main/default/objects/OrderItemGeneral__c/fields/UnitPrice_t__c.field-meta.xml
<CustomField>
    <fullName>UnitPrice_t__c</fullName>
    <formula>OrderProduct__r.UnitPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Price (per t)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>