force-app/main/default/objects/OrderItemGeneral__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ProdName__c</columns>
    <columns>CDD_Deviation__c</columns>
    <columns>Qty_t__c</columns>
    <columns>PlanFactDiff__c</columns>
    <columns>Shipping_Delta__c</columns>
    <columns>Deliv_Delta__c</columns>
    <columns>FinallyProdDate__c</columns>
    <columns>FinallyShippedDate__c</columns>
    <columns>FinallyDelivDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>